--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,12 @@
       "@/components/*": ["src/components/*"],
       "@/styles/*": ["src/styles/*"],
       "@/pages/*": ["src/pages/*"],
-      "@/hooks/*": ["src/hooks/*"]
+      "@/hooks/*": ["src/hooks/*"],
+      "@/data/*": ["src/data/*"],   
+      "@/types": ["src/types"],
+      "@/types/*": ["src/types/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/types/global.d.ts"],
   "exclude": ["node_modules"]
 }
