--- a/package.json
+++ b/package.json
@@ -2,35 +2,42 @@
   "name": "kl-recycling-website",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint",
-  "lint:fix": "eslint src --ext .ts,.tsx --fix"
-},
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix"
+  },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/typography": "^0.5.19",
     "aos": "^2.3.4",
-    "next": "^14.2.33",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.23.22",
+    "next": "^15.5.4",
+    "prettier": "^3.6.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-intersection-observer": "^9.16.0",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@types/node": "24.6.2",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "^14.2.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "kill-port": "^2.0.1",
     "napi-postinstall": "^0.3.3",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
-    "typescript": "5.5.3"
+    "tailwindcss": "^4.1.14",
+    "typescript": "5.9.3"
   }
 }
