--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
   },
   "include": [
     "next-env.d.ts",
+    "next.config.js",
+    "postcss.config.js",
+    "tailwind.config.js",
     "**/*.ts",
     "**/*.tsx",
     "src/types/global.d.ts",
