--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix"
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
@@ -25,7 +26,10 @@
     "sharp": "^0.34.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/aos": "^3.0.7",
+    "@types/jest": "^30.0.0",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -36,10 +40,13 @@
     "eslint-config-next": "^14.2.33",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "kill-port": "^2.0.1",
     "napi-postinstall": "^0.3.3",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
+    "ts-jest": "^29.4.4",
     "typescript": "5.5.3"
   }
 }
