--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,7 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "types": ["jest", "node"]
   },
-  "include": ["src/**/*.test.ts", "src/**/*.test.tsx", "jest.config.js"]
+  "include": [
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.ts",
+    "src/**/*.spec.tsx"
+  ]
 }
