--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage" 
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
@@ -17,9 +18,9 @@
     "@tailwindcss/typography": "^0.5.19",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
+    "dependencies": "^0.0.1",
     "framer-motion": "^12.23.22",
     "next": "^14.2.33",
-    "prettier": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
@@ -29,7 +30,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/aos": "^3.0.7",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -38,15 +39,13 @@
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "^14.2.33",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "kill-port": "^2.0.1",
     "napi-postinstall": "^0.3.3",
     "postcss": "^8.4.39",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.6",
-    "ts-jest": "^29.4.4",
     "typescript": "5.5.3"
   }
 }
