--- a/package.json
+++ b/package.json
@@ -2,50 +2,43 @@
   "name": "kl-recycling-website",
   "version": "0.1.0",
   "private": true,
-  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "test": "jest",
-    "test:coverage": "jest --coverage" 
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint:format": "npm run lint:fix && npm run format:fix"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.20.7",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.19",
-    "aos": "^2.3.4",
-    "class-variance-authority": "^0.7.1",
-    "dependencies": "^0.0.1",
-    "framer-motion": "^12.23.22",
-    "next": "^14.2.33",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.16.0",
-    "sharp": "^0.34.4"
+    "@react-google-maps/api": "^2.19.3",
+    "@next/font": "^14.2.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^10.18.0",
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.10.2",
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/aos": "^3.0.7",
-    "@types/jest": "^29.5.12",
-    "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "^14.2.33",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "kill-port": "^2.0.1",
-    "napi-postinstall": "^0.3.3",
-    "postcss": "^8.4.39",
-    "prettier": "^3.6.2",
-    "tailwindcss": "^3.4.6",
-    "typescript": "5.5.3"
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.5"
   }
 }
